--- a/Code/run_yaml/fine_tune_electra_cute_donkey.yaml
+++ b/Code/run_yaml/fine_tune_electra_cute_donkey.yaml
@@ -83,7 +83,7 @@ search:
       values: ['0.125', '0.15625', '0.1875', '0.21875']  #['4/32,7/32,4']
     - name: Intermediate_Mult_List
       spec: discrete
-      values: ['2.5', '3.0', '3.5', '4.0']
+      values: ['2.0', '2.5', '3.0', '3.5', '4.0']
     - name: Training_Phase
       spec: discrete
       values: ['final_finetuning']
