--- a/Code/run_yaml/fine_tune_electra_frank_ape.yaml
+++ b/Code/run_yaml/fine_tune_electra_frank_ape.yaml
@@ -1,4 +1,4 @@
-description: Electra-large-cute-donkey-original-code
+description: Electra-large-frank-ape-original-code
 
 target:
   service: amlk8s
@@ -42,8 +42,8 @@ search:
         --task_name {TASK_NAME}
         --do_train
         --data_dir $$PT_DATA_DIR/Data_GLUE/glue_data/{TASK_NAME}/
-        --model_dir  $$PT_DATA_DIR/Local_models/custom_models/subho-pretrained-model-run-cute-donkey-step-400000/
-        --output_dir $$PT_DATA_DIR/../projects/kdnas/amlt-results/cute_donkey_original_code/Task_{TASK_NAME}_Layer_{Depth_Mult_List}_Hid_{Hidden_Mult_List}_Head_{Width_Mult_List}_Ratio_{Intermediate_Mult_List}_original_code
+        --model_dir  $$PT_DATA_DIR/Local_models/custom_models/subho-pretrained-model-run-frank-ape-step-400000/
+        --output_dir $$PT_DATA_DIR/../projects/kdnas/amlt-results/frank_ape_original_code/Task_{TASK_NAME}_Layer_{Depth_Mult_List}_Hid_{Hidden_Mult_List}_Head_{Width_Mult_List}_Ratio_{Intermediate_Mult_List}
         --max_seq_length {Max_Seq_Length}
         --learning_rate {LR}
         --per_gpu_train_batch_size {Per_GPU_Train_Batch_Size}
@@ -83,7 +83,7 @@ search:
       values: ['0.125', '0.15625', '0.1875', '0.21875']  #['4/32,7/32,4']
     - name: Intermediate_Mult_List
       spec: discrete
-      values: ['2.5', '3.0', '3.5', '4.0']
+      values: ['2.0', '2.5', '3.0', '3.5']
     - name: Training_Phase
       spec: discrete
       values: ['final_finetuning']
