--- a/Code/run_yaml/fine_tune_electra_huge_newt.yaml
+++ b/Code/run_yaml/fine_tune_electra_huge_newt.yaml
@@ -1,4 +1,4 @@
-description: Electra-large-cute-donkey-original-code
+description: Electra-large-huge-newt-original-code
 
 target:
   service: amlk8s
@@ -42,8 +42,8 @@ search:
         --task_name {TASK_NAME}
         --do_train
         --data_dir $$PT_DATA_DIR/Data_GLUE/glue_data/{TASK_NAME}/
-        --model_dir  $$PT_DATA_DIR/Local_models/custom_models/subho-pretrained-model-run-cute-donkey-step-400000/
-        --output_dir $$PT_DATA_DIR/../projects/kdnas/amlt-results/cute_donkey_original_code/Task_{TASK_NAME}_Layer_{Depth_Mult_List}_Hid_{Hidden_Mult_List}_Head_{Width_Mult_List}_Ratio_{Intermediate_Mult_List}_original_code
+        --model_dir  $$PT_DATA_DIR/Local_models/custom_models/subho-pretrained-model-run-huge-newt-step-400000/
+        --output_dir $$PT_DATA_DIR/../projects/kdnas/amlt-results/huge_newt_original_code/Task_{TASK_NAME}_Layer_{Depth_Mult_List}_Hid_{Hidden_Mult_List}_Head_{Width_Mult_List}_Ratio_{Intermediate_Mult_List}_original_code
         --max_seq_length {Max_Seq_Length}
         --learning_rate {LR}
         --per_gpu_train_batch_size {Per_GPU_Train_Batch_Size}
@@ -74,16 +74,16 @@ search:
       values: [12]                  # [0.083, 0.167, 0.25, 0.333, 0.417, 0.5, 0.583, 0.667, 0.75 , 0.833, 0.917, 1.0 ]
     - name: Depth_Mult_List                    ## base = H, A, R, L = 32*18, 12, 4.0, 12 = 66,019,968
       spec: discrete
-      values: ['0.166667', '0.2083333', '0.25', '0.2916666667'] #['4/24,7/24,4']
+      values: ['0.333333', '0.4166667', '0.5', '0.58333333'] #['4/12,7/12,4']
     - name: Width_Mult_List
       spec: discrete
-      values: ['0.4375', '0.5', '0.5625', '0.625'] #['7/16,10/16,4']
+      values: ['0.583333', '0.66667', '0.75', '0.83333'] # 7/12,10/12,4
     - name: Hidden_Mult_List
       spec: discrete
-      values: ['0.125', '0.15625', '0.1875', '0.21875']  #['4/32,7/32,4']
+      values: ['0.166667', '0.2083333', '0.25', '0.291667']  #4/24,7/24,4
     - name: Intermediate_Mult_List
       spec: discrete
-      values: ['2.5', '3.0', '3.5', '4.0']
+      values: ['2.0', '2.5', '3.0', '3.5']
     - name: Training_Phase
       spec: discrete
       values: ['final_finetuning']
